force-app/main/default/objects/SOLXYZCSO001__EstimateNumbering__c/SOLXYZCSO001__EstimateNumbering__c.object-meta.xml
<CustomObject>
    <description>This is an object for auto-numbering.</description>
    <label>自動採番</label>
    <nameField>
        <label>自動採番名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>