force-app/main/default/objects/SOLXYZCSO001__EstimateNumbering__c/fields/SOLXYZCSO001__NowCount__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__NowCount__c</fullName>
    <description>現在値です</description>
    <label>現在値</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>