force-app/main/default/objects/SOLXYZCSO001__EstimateNumbering__c/fields/SOLXYZCSO001__NumberingFormat__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__NumberingFormat__c</fullName>
    <description>フォーマット</description>
    <label>フォーマット</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>